src/objects/OWF_Config__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>OWF-MC-ESPSFDCQI-2183-Holds config and default values for OWF globally</description>
    <fields>
        <fullName>Current_Release__c</fullName>
        <label>Current Release</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elvis_Folder_URL__c</fullName>
        <description>IQVIAPSA-10083-QIP Submission email template</description>
        <label>Elvis Folder URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_Agreement_Notification_Service__c</fullName>
        <defaultValue>true</defaultValue>
        <description>OWF-IQVIAPSA-3633: Enable Agreement notification service</description>
        <label>Enable Agreement Notification Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GSK_Account_Name__c</fullName>
        <description>OWF-IQVIAPSA-3633: GSK account Name</description>
        <label>GSK Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incompatible_LOB_Set_1__c</fullName>
        <description>OWF - ESPSFDCQI-4164- This field hold the set 1 of Incompatible LOB for Clinical bid</description>
        <label>Incompatible LOB Set 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Incompatible_LOB_Set_2__c</fullName>
        <description>OWF - ESPSFDCQI-4164- This field hold the set 2 of Incompatible LOB for Clinical bid</description>
        <label>Incompatible LOB Set 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LCS_Bid_Defence_Resource__c</fullName>
        <description>OWF-IQVIAPSA-1318- LCS Bid Defence Resource Id</description>
        <label>LCS Bid Defence Resource</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OWF_Compatible_Group_Set_1__c</fullName>
        <description>OWF - ESPSFDCQI-5753 - OWF Compatible Group Set 1</description>
        <label>OWF Compatible Group Set 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OWF_Compatible_Group_Set_2__c</fullName>
        <description>OWF -ESPSFDCQI-5753- OWF Compatible Group Set 2</description>
        <label>OWF Compatible Group Set 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OWF_Compatible_Group_Set_3__c</fullName>
        <description>OWF -ESPSFDCQI-4018- OWF Compatible Group Set 3</description>
        <label>OWF Compatible Group Set 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OWF_Multiple_RR_Compatible_Subgroups__c</fullName>
        <label>OWF Multiple RR Compatible Subgroups</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OWF_Standard_Group__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2183</description>
        <label>OWF Standard Group</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_of_Sync_Skill_Name__c</fullName>
        <description>OWF-This field Contains the Skill Name that has been out sync due to change in Thereapy Area Picklist</description>
        <label>Out of Sync Skill Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Package_Licence_ID__c</fullName>
        <description>OWF - ESPSFDCQI-4741 - Holds the Id of PSA Licence</description>
        <label>PSA Package Licence ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OWF Config</label>
</CustomObject>